# jetson-dronekit-camera

./: .env  COPYRIGHT  Dockerfile  README.md  app.py  docker-compose.override.yml  docker-compose.yml  example.py  mavproxy.Dockerfile  pyproject.toml  sitl.Dockerfile  test.py
app/: Dockerfile  camera.py  camera_manager.py  example.py  example_threading.py  gpslogger.py  helper.py  jetson_camera.py  main.py  multihead.py  multiheadcamera.py  pyproject.toml  sitl.Dockerfile
mavproxy/: Dockerfile  mavproxy.sh
sitl/: Dockerfile
tests/: test_camera_module.py  test_helper.py  test_logger.py  test_multi_head.py
