[tool.poetry]
name = "jetson-dronekit-camera"
version = "0.1.0"
description = ""
authors = ["thomasf <tf@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.6"
dronekit = "^2.9.2"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
